fix: :lipstick: change sizes and spacing in left sidebar nav

--- a/src/app/dashboard/Nav.module.scss
+++ b/src/app/dashboard/Nav.module.scss
@@ -4,7 +4,7 @@
     // border: 1px solid red;
     height: 100%;
     margin: 1rem 0;
-    padding: 0 2rem;
+    padding: 0 1.75rem;
 
     display: flex;
     flex-direction: column;
@@ -38,12 +38,11 @@
     &_section {
         display: flex;
         flex-direction: column;
-        gap: 1.75rem;
+        gap: 1rem;
 
         &_title {
             text-transform: uppercase;
-            font-size: 1.1rem;
-            font-weight: 600;
+            font-weight: 700;
         }
 
         &_links {
