--- a/src/app/dashboard/OrganizationSelector.module.scss
+++ b/src/app/dashboard/OrganizationSelector.module.scss
@@ -1,14 +1,13 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    gap: 1.25rem;
+    gap: 1rem;
 }
 
 .label {
     text-transform: uppercase;
 
-    font-weight: 600;
-    font-size: 1.1rem;
+    font-weight: 700;
 }
 
 .select {
